--- a/notasdafacul.client/src/app/grade-details/grade-details.component.html
+++ b/notasdafacul.client/src/app/grade-details/grade-details.component.html
@@ -1,54 +1,57 @@
-<mat-toolbar-row>
-  <span>Notas da Facul</span>
-</mat-toolbar-row>
-<mat-grid-list cols="2" rowHeight="1:1">
-  <mat-grid-tile>
-    <mat-card>
-      <h6>Meu histórico</h6>
+<mat-toolbar class="toolbar">
+  <mat-toolbar-row>
+    <span class="toolbar-title">Notas da Facul</span>
+  </mat-toolbar-row>
+</mat-toolbar>
 
-      <table mat-table [dataSource]="service.list" class="mat-elevation-z8">
-        <ng-container matColumnDef="course">
-          <th mat-header-cell *matHeaderCellDef> Curso </th>
-          <td mat-cell *matCellDef="let element"> {{element.course}} </td>
-        </ng-container>
+  <mat-grid-list cols="2" rowHeight="1:1">
+    <mat-grid-tile>
+      <mat-card class="card">
+        <p class="card-title">Meu histórico</p>
 
-        <ng-container matColumnDef="grade">
-          <th mat-header-cell *matHeaderCellDef> Nota </th>
-          <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
-        </ng-container>
+        <table mat-table [dataSource]="service.list">
+          <ng-container matColumnDef="course">
+            <th mat-header-cell *matHeaderCellDef> Curso </th>
+            <td mat-cell *matCellDef="let element"> {{element.course}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef> Data </th>
-          <td mat-cell *matCellDef="let element"> {{element.date}} </td>
-        </ng-container>
+          <ng-container matColumnDef="grade">
+            <th mat-header-cell *matHeaderCellDef> Nota </th>
+            <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
-      </table>
-    </mat-card>
-  </mat-grid-tile>
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> Data </th>
+            <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+          </ng-container>
 
-  <mat-grid-tile>
-    <mat-card>
-      <h6>Inserir nota</h6>
+          <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+          <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+        </table>
+      </mat-card>
+    </mat-grid-tile>
 
-      <mat-form-field appearance="outline">
-        <mat-label> Curso </mat-label>
-        <input matInput>
-      </mat-form-field>
+    <mat-grid-tile>
+      <mat-card class="card">
+        <p class="card-title">Inserir nota</p>
 
-      <mat-form-field appearance="outline">
-        <mat-label> Nota </mat-label>
-        <input matInput>
-      </mat-form-field>
+        <mat-form-field appearance="outline" class="input-field">
+          <mat-label> Curso </mat-label>
+          <input matInput>
+        </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label> Data </mat-label>
-        <input matInput>
-      </mat-form-field>
+        <mat-form-field appearance="outline" class="input-field">
+          <mat-label> Nota </mat-label>
+          <input matInput>
+        </mat-form-field>
 
-      <button mat-flat-button>Enviar</button>
+        <mat-form-field appearance="outline" class="input-field">
+          <mat-label> Data </mat-label>
+          <input matInput>
+        </mat-form-field>
 
-    </mat-card>
-  </mat-grid-tile>
-</mat-grid-list>
+        <button mat-flat-button>Enviar</button>
+
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
