Adição do datepicker, ajustes de resposividade e finalização da função que permite o usuário inserir novas notas

--- a/notasdafacul.client/src/app/grade-details/grade-details.component.css
+++ b/notasdafacul.client/src/app/grade-details/grade-details.component.css
@@ -16,13 +16,24 @@
 }
 
 .input-field {
-  background-color: #ffffff;
+  width: 100%;
 }
 
 .card {
   background-color: #d7e3ff;
   width: 700px;
   height: auto;
+  padding: 16px;
 }
 
+.responsive-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 16px;
+}
 
+@media (max-width: 600px) {
+  .responsive-grid {
+    grid-template-columns: 1fr;
+  }
+}
