Configuração de validação nos inputs e finalização das função de editação de exclusão de notas

--- a/notasdafacul.client/src/app/grade-details/grade-details.component.html
+++ b/notasdafacul.client/src/app/grade-details/grade-details.component.html
@@ -8,7 +8,7 @@
   <mat-grid-tile>
     <mat-card class="card">
       <p class="card-title">Meu histórico</p>
-
+      <p class="card-subtitle">Clique em uma linha para editar!</p>
       <table mat-table [dataSource]="service.list">
         <ng-container matColumnDef="course">
           <th mat-header-cell *matHeaderCellDef> Curso </th>
@@ -25,8 +25,14 @@
           <td mat-cell *matCellDef="let element"> {{element.date}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef> Excluir? </th>
+          <td mat-cell *matCellDef="let element"> <button mat-flat-button (click)="deleteRecord(element.id)"> Excluir </button> </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnsToDisplay;" (click)="populateForm(row)">
+        </tr>
       </table>
     </mat-card>
   </mat-grid-tile>
@@ -37,17 +43,17 @@
       <form #form="ngForm" (submit)="onSubmit(form)">
         <mat-form-field appearance="outline" class="input-field">
           <mat-label> Curso </mat-label>
-          <input matInput type="text" #course="ngModel" name="course" [(ngModel)]="service.formData.course">
+          <input matInput type="text" #course="ngModel" name="course" [(ngModel)]="service.formData.course" required autocomplete="off">
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="input-field">
           <mat-label> Nota </mat-label>
-          <input matInput type="number" #grade="ngModel" name="grade" [(ngModel)]="service.formData.grade">
+          <input matInput type="number" #grade="ngModel" name="grade" [(ngModel)]="service.formData.grade" required autocomplete="off">
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="input-field">
           <mat-label> Data </mat-label>
-          <input matInput [matDatepicker]="picker" #date="ngModel" name="date" [(ngModel)]="service.formData.date">
+          <input matInput [matDatepicker]="picker" #date="ngModel" name="date" [(ngModel)]="service.formData.date" required autocomplete="off">
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
