--- a/notasdafacul.client/src/app/grade-details/grade-details.component.css
+++ b/notasdafacul.client/src/app/grade-details/grade-details.component.css
@@ -15,6 +15,12 @@
   font-size: 18px;
 }
 
+.card-subtitle {
+  font-weight: 500;
+  color: #005cbb;
+  font-size: 14px;
+}
+
 .input-field {
   width: 100%;
 }
