--- a/notasdafacul.client/src/app/grade-details/grade-details.component.html
+++ b/notasdafacul.client/src/app/grade-details/grade-details.component.html
@@ -27,7 +27,7 @@
 
         <ng-container matColumnDef="delete">
           <th mat-header-cell *matHeaderCellDef> Excluir? </th>
-          <td mat-cell *matCellDef="let element"> <button mat-flat-button (click)="deleteRecord(element.id)"> Excluir </button> </td>
+          <td mat-cell *matCellDef="let element"> <button mat-flat-button (click)="deleteRecord(element.id)" color="warn" class="send-button"> Excluir </button> </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
