--- a/notasdafacul.client/src/styles.css
+++ b/notasdafacul.client/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; background: #f5f5f5}
+html, body { height: 100%; background: #fafafa}
 body { margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif }
